<resources>
    <string name="app_name">Safety Code</string>
    <string name="button_scan">Scan a QR Safety Code</string>
    <string name="button_manual">Define your own profile</string>
    <string name="button_code">Get recommendations</string>
    <string name="title_activity_manual_definition">Custom genetic profile</string>
    <string name="title_activity_display_recommendations">Relevant guidelines</string>
    <string name="error_message"></string>
    <string name="action_warning">Warning</string>
	<string name="msc_initiative">The Medicine Safety Code Initiative</string>
	<string name="personalized_medicine_header_msg">PERSONALIZED MEDICINE IN YOUR POCKET</string>
	<string name="personalized_medicine_body_msg">A small set of so-called pharmacogenes has an impact on the safety and efficacy of many common medications. The Medication Safety Code makes data about these pharmacogenes available whenever needed during medical care.</string>
	<string name="general_features_header_msg">OPEN, ANONYMOUS AND SECURE</string>
	<string name="general_features_body_msg">Patients have full control over their genetic data, just as they have full control over the content of their wallets. The Medication Safety Code is based on open standards and open-source software.</string>
	<string name="ubiquitous_cds_header_msg">UBIQUITOUS CLINICAL DECISION SUPPORT</string>
	<string name="ubiquitous_cds_body_msg">The QR codes can be quickly decoded with any smartphone to yield recommendations for tailoring pharmacotherapy based on an individual\'s genetic profile.</string>
	<string name="footer_msg"></string>
	<string name="cyp2c19_head_msg">CYP2C19</string>
	<string name="cyp2c9_head_msg">CYP2C9</string>
	<string name="cyp2d6_head_msg">CYP2D6</string>
	<string name="cyp3a5_head_msg">CYP3A5</string>
	<string name="dpyd_head_msg">DPYD</string>
	<string name="hla_a_head_msg">HLA-A</string>
	<string name="hla_b_head_msg">HLA-B</string>
	<string name="tpmt_head_msg">TPMT</string>
	<string name="ugt1a1_head_msg">UGT1A1</string>
	<string name="rs12979860_head_msg">rs12979860</string>
	<string name="rs2297595_head_msg">rs2297595</string>
	<string name="rs4149056_head_msg">rs4149056</string>
	<string name="rs6025_head_msg">rs6025</string>
	<string name="rs67376798_head_msg">rs67376798</string>
	<string name="rs9923231_head_msg">rs9923231</string>
	<string name="rs9934438_head_msg">rs9934438</string>
	<string-array name="ABCB1">
	    <item>None</item>
        <item>star_1</item>
        <item>star_2_PMID_11503014</item>
        <item>star_2_PMID_12893986</item>
        <item>star_13_PMID_12893986</item>        
    </string-array>
	<string-array name="ADRB1">
	    <item>None</item>
        <item>H1</item>
        <item>H2</item>
        <item>H3</item>        
    </string-array>
	<string-array name="BRCA1">
	    <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>hash1</item>
        <item>hash2</item>
        <item>hash3</item>
        <item>hash4</item>
        <item>hash5</item>
        <item>Ancestral_Sequence</item>
    </string-array>
	<string-array name="COMT">
	    <item>None</item>
        <item>Haplotype_low_activity</item>
        <item>Haplotype_high_activity</item>
        <item>Haplotype_intermediate_activity</item>        
    </string-array>
	<string-array name="CYP2A6">
		<item>None</item>
		<item>star_1</item>
		<item>star_2</item>
		<item>star_3</item>
		<item>star_4</item>
		<item>star_5</item>
		<item>star_6</item>
		<item>star_7</item>
		<item>star_8</item>
		<item>star_9</item>
		<item>star_10</item>
		<item>star_11</item>
		<item>star_12</item>
		<item>star_13</item>
		<item>star_14</item>
		<item>star_15</item>
		<item>star_16</item>
		<item>star_17</item>
		<item>star_18</item>
		<item>star_19</item>
		<item>star_1A</item>
		<item>star_1C</item>
		<item>star_1D</item>
		<item>star_1E</item>
		<item>star_1F</item>
		<item>star_1G</item>
		<item>star_1H</item>
		<item>star_1J</item>
		<item>star_1K</item>
		<item>star_1L</item>
		<item>star_20</item>
		<item>star_21</item>
		<item>star_22</item>
		<item>star_23</item>
		<item>star_24</item>
		<item>star_25</item>
		<item>star_26</item>
		<item>star_27</item>
		<item>star_28</item>
		<item>star_31</item>
		<item>star_34</item>
		<item>star_35</item>
		<item>star_36</item>
		<item>star_37</item>
		<item>star_4A</item>
		<item>star_4B</item>
		<item>star_4C</item>
		<item>star_4D</item>
		<item>star_4E</item>
		<item>star_4F</item>
		<item>star_4G</item>
		<item>star_4H</item>
		<item>star_9A</item>
		<item>star_9B</item>
		<item>star_12A</item>
		<item>star_12B</item>
		<item>star_12C</item>
		<item>star_18A</item>
		<item>star_18B</item>
		<item>star_18C</item>
		<item>star_1B1</item>
		<item>star_1B2</item>
		<item>star_1B3</item>
		<item>star_1B4</item>
		<item>star_1B5</item>
		<item>star_1B6</item>
		<item>star_1B7</item>
		<item>star_1B8</item>
		<item>star_1B9</item>
		<item>star_24A</item>
		<item>star_24B</item>
		<item>star_28A</item>
		<item>star_28B</item>
		<item>star_31A</item>
		<item>star_31B</item>
		<item>star_35A</item>
		<item>star_35B</item>
		<item>star_1B10</item>
		<item>star_1B11</item>
		<item>star_1B12</item>
		<item>star_1B13</item>
		<item>star_1B14</item>
		<item>star_1B15</item>
		<item>star_1B16</item>
		<item>star_1B17</item>
		<item>star_1X2A</item>
		<item>star_1X2B</item>
	</string-array>
	<string-array name="CYP2B6">
		<item>None</item>
		<item>star_1</item>
		<item>star_2</item>
		<item>star_3</item>
		<item>star_4</item>
		<item>star_5</item>
		<item>star_6</item>
		<item>star_7</item>
		<item>star_8</item>
		<item>star_9</item>
		<item>star_10</item>
		<item>star_11</item>
		<item>star_12</item>
		<item>star_13</item>
		<item>star_14</item>
		<item>star_15</item>
		<item>star_16</item>
		<item>star_17</item>
		<item>star_18</item>
		<item>star_19</item>
		<item>star_1A</item>
		<item>star_1B</item>
		<item>star_1C</item>
		<item>star_1D</item>
		<item>star_1E</item>
		<item>star_1F</item>
		<item>star_1G</item>
		<item>star_1H</item>
		<item>star_1J</item>
		<item>star_1K</item>
		<item>star_1L</item>
		<item>star_1M</item>
		<item>star_1N</item>
		<item>star_20</item>
		<item>star_21</item>
		<item>star_22</item>
		<item>star_23</item>
		<item>star_24</item>
		<item>star_25</item>
		<item>star_26</item>
		<item>star_27</item>
		<item>star_28</item>
		<item>star_29</item>
		<item>star_2A</item>
		<item>star_2B</item>
		<item>star_4A</item>
		<item>star_4B</item>
		<item>star_4C</item>
		<item>star_4D</item>
		<item>star_5A</item>
		<item>star_5B</item>
		<item>star_5C</item>
		<item>star_6A</item>
		<item>star_6B</item>
		<item>star_6C</item>
		<item>star_7A</item>
		<item>star_7B</item>
		<item>star_11A</item>
		<item>star_11B</item>
		<item>star_13A</item>
		<item>star_13B</item>
		<item>star_15A</item>
		<item>star_15B</item>
		<item>star_17A</item>
		<item>star_17B</item>
	</string-array>
	<string-array name="CYP2C19">
		<item>None</item>
		<item>star_1</item>
		<item>star_2</item>
		<item>star_3</item>
		<item>star_4</item>
		<item>star_5</item>
		<item>star_6</item>
		<item>star_7</item>
		<item>star_8</item>
		<item>star_9</item>
		<item>star_10</item>
		<item>star_11</item>
		<item>star_12</item>
		<item>star_13</item>
		<item>star_14</item>
		<item>star_15</item>
		<item>star_16</item>
		<item>star_17</item>
		<item>star_18</item>
		<item>star_19</item>
		<item>star_1A</item>
		<item>star_1B</item>
		<item>star_1C</item>
		<item>star_22</item>
		<item>star_23</item>
		<item>star_24</item>
		<item>star_25</item>
		<item>star_26</item>
		<item>star_27</item>
		<item>star_2A</item>
		<item>star_2B</item>
		<item>star_2C</item>
		<item>star_2D</item>
		<item>star_3A</item>
		<item>star_3B</item>
		<item>star_4A</item>
		<item>star_4B</item>
		<item>star_5A</item>
		<item>star_5B</item>
	</string-array>
	<string-array name="CYP2C9">
		<item>None</item>
		<item>star_1</item>
		<item>star_2</item>
		<item>star_3</item>
		<item>star_4</item>
		<item>star_5</item>
		<item>star_6</item>
		<item>star_7</item>
		<item>star_8</item>
		<item>star_9</item>
		<item>star_10</item>
		<item>star_11</item>
		<item>star_12</item>
		<item>star_13</item>
		<item>star_14</item>
		<item>star_15</item>
		<item>star_16</item>
		<item>star_17</item>
		<item>star_18</item>
		<item>star_19</item>
		<item>star_20</item>
		<item>star_21</item>
		<item>star_22</item>
		<item>star_23</item>
		<item>star_24</item>
		<item>star_25</item>
		<item>star_26</item>
		<item>star_27</item>
		<item>star_28</item>
		<item>star_29</item>
		<item>star_30</item>
		<item>star_31</item>
		<item>star_32</item>
		<item>star_33</item>
		<item>star_34</item>
	</string-array>
</resources>